--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^19.0.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
     "react-toastify": "^11.0.3"
   },
   "devDependencies": {
